# workout-app-backend

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  programmes.postman_collection.json  readme.md  workout-app.postman_collection.json
https/: auth.http  body_parts.http  categories.http  equipment.http  exercises.http  favorite_meals.http  favorite_workouts.http  forgot-password.http  leaderboards.http  me.http  meal_plans.http  meals.http  programme_progress.http  programmes.http  statistics.http  test_smtp.http  users.http  workout_progress.http  workouts.http
migrations/2024-01-09-000001_create_body_parts/: down.sql  up.sql
migrations/2024-01-09-000002_create_categories/: up.sql
migrations/2024-01-09-000003_create_equipment/: down.sql  up.sql
migrations/2024-01-09-000004_create_exercises/: down.sql  up.sql
migrations/2024-01-10-000001_create_meals/: down.sql  up.sql
migrations/2024-01-11-000002_create_favorite_workouts/: up.sql
migrations/2024-01-12-000001_create_meal_plans/: down.sql  up.sql
migrations/2024-03-19-000001_add_met_to_exercises/: down.sql  up.sql
migrations/2024-03-20-000001_change_met_type/: down.sql  up.sql
migrations/2024-10-04-000538_create_user/: up.sql
migrations/2025-02-17-170813_create_workouts/: down.sql  up.sql
migrations/2025-02-18-044020_create_workouts/: up.sql
migrations/2025-02-18-044021_create_favorite_meals/: down.sql  up.sql
migrations/2025-02-18-044021_create_programmes/: down.sql  up.sql
migrations/2025-02-20-012022_create_favorite_meals/: up.sql
src/: config.rs  db.rs  guard.rs  main.rs  schema.rs
(+86 files in other folders)
